charon/tests/ui/rename_attribute_failure.out
error: Attribute `{charon,aeneas}::rename` should not contain an empty string
 --> tests/ui/rename_attribute_failure.rs:8:1
  |
8 | type TestEmpty = i32;
  | ^^^^^^^^^^^^^^

error: Attribute `rename` should only contain alphanumeric characters and `_`, and should start with a letter or '_': "Test!976?" is not a valid name
  --> tests/ui/rename_attribute_failure.rs:12:1
   |
12 | type TestNonAlphanumeric = i32;
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: Attribute `rename` should only contain alphanumeric characters and `_`, and should start with a letter or '_': "75Test" is not a valid name
  --> tests/ui/rename_attribute_failure.rs:16:1
   |
16 | type TestNotStartingWithLetter = i32;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Attribute `{charon,aeneas}::rename` should be of the shape `{charon,aeneas}::rename("...")`: `charon::rename()` is not valid
  --> tests/ui/rename_attribute_failure.rs:20:1
   |
20 | type TestNotProperShape = i32;
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

[ ERROR charon_driver:231] The extraction encountered 4 errors
Error: Charon driver exited with code 1
